cluster/prod/syncthing/syncthing/syncthing.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: syncthing
  labels:
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/instance: syncthing
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syncthing
    spec:
      automountServiceAccountToken: false
      containers:
      - name: syncthing
        image: syncthing/syncthing:1.11
        ports:
        - containerPort: 8384
          protocol: TCP
        - containerPort: 22000
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: backup
      volumes:
      - name: backup
        nfs:
          path: /volume1/Backup
          server: 192.168.0.150
