cluster/prod/syncthing/syncthing/syncthing-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: syncthing
  labels:
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/instance: syncthing
spec:
  selector:
    app.kubernetes.io/name: syncthing
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8384
    name: webui
  - protocol: TCP
    port: 22000
    name: listener
