cluster/prod/syncthing/syncthing/syncthing-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-default-middlewares-chain@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.options: traefik-secure-tlsoptions@kubernetescrd
  labels:
    app.kubernetes.io/instance: syncthing
    app.kubernetes.io/name: syncthing
  name: syncthing
  namespace: syncthing
spec:
  ingressClassName: traefik
  rules:
  - host: sync.nathanpawelek.com
    http:
      paths:
      - backend:
          service:
            name: syncthing
            port:
              number: 8384
        path: /
        pathType: ImplementationSpecific
  - host: syncthing.nathanpawelek.com
    http:
      paths:
      - backend:
          service:
            name: syncthing
            port:
              number: 22000
        path: /
        pathType: ImplementationSpecific
  tls:
  - secretName: nathanpawelek-com-tls
